Bug 263313 - inserts line breaks in quoted messages, missing quote signs
Summary: inserts line breaks in quoted messages, missing quote signs
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-16 13:47 UTC by Alexander van Loon
Modified: 2011-11-10 10:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments
screenshot of original message and same message quoted incorrectly in composer (329.38 KB, image/png)
2011-01-16 13:48 UTC, Alexander van Loon
Details
resulting e-mail message after sending reply (232.68 KB, image/png)
2011-01-16 13:49 UTC, Alexander van Loon
Details
another example of an incorrectly quoted message, although not as bad as the first example (88.37 KB, image/png)
2011-01-16 13:50 UTC, Alexander van Loon
Details
file of the e-mail seen in the first attachment (1.14 KB, application/octet-stream)
2011-01-16 21:34 UTC, Alexander van Loon
Details
correctly saved file of the e-mail (2.77 KB, application/octet-stream)
2011-01-17 16:37 UTC, Alexander van Loon
Details
KMail erroneously replacing quote signs (105.46 KB, image/png)
2011-01-26 13:29 UTC, Alexander van Loon
Details
source of the message being replied to in previous screenshot (16.22 KB, application/octet-stream)
2011-01-26 13:29 UTC, Alexander van Loon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander van Loon 2011-01-16 13:47:18 UTC
Version:           unspecified
OS:                Linux

I’m on KMail 4.6 beta 3 and I notice that it doesn’t always quote messages correctly when I reply to a message. It then inserts line breaks in the quoted message where they should not be inserted, and doesn’t insert quote signs at the right places. This is best illustrated with the two screenshots I’m going to add.

On the specific messages which trigger this behavior it’s always reproducible, but other messages work fine when I hit reply.

Reproducible: Always
Comment 1 Alexander van Loon 2011-01-16 13:48:47 UTC
Created attachment 56087 [details]
screenshot of original message and same message quoted incorrectly in composer
Comment 2 Alexander van Loon 2011-01-16 13:49:35 UTC
Created attachment 56088 [details]
resulting e-mail message after sending reply
Comment 3 Alexander van Loon 2011-01-16 13:50:16 UTC
Created attachment 56089 [details]
another example of an incorrectly quoted message, although not as bad as the first example
Comment 4 Torgny Nyblom 2011-01-16 20:08:21 UTC
Could you please attach the message that triggers this as an mbox file?
Comment 5 Alexander van Loon 2011-01-16 21:34:12 UTC
Created attachment 56106 [details]
file of the e-mail seen in the first attachment
Comment 6 Torgny Nyblom 2011-01-17 08:29:39 UTC
Sorry but we need the hole email (including headers).

Save as in KMail should work.
Comment 7 Alexander van Loon 2011-01-17 16:37:44 UTC
Created attachment 56131 [details]
correctly saved file of the e-mail

I used ‘Save As...’ in KMail to save the message. When I read your comment I went on to investigate why the headers were apparently missing, as I noticed it too when I opened the mbox file with Kate.

It turns out that I have discovered another bug, which I just filed as bug #263434. That aside, here is the correctly saved message with headers included.
Comment 8 Alexander van Loon 2011-01-26 13:28:20 UTC
I was wondering if there is a workaround available for this bug which I could use while the the issue is not yet fixed? This bug is quite annoying because many e-mails I send get messed up because of absent quote signs.

Also, I have discovered that in some situations the quote sign ‘>’ is replaced by the characters ‘>’ which is illustrated in the following screenshot I’m going to add. I’ll also add the message which triggers the bug if I reply to it with KMail. I’m not sure if this is a different bug which is related to encoding or something, but I suspect that this issue is caused by this bug as well.
Comment 9 Alexander van Loon 2011-01-26 13:29:07 UTC
Created attachment 56439 [details]
KMail erroneously replacing quote signs
Comment 10 Alexander van Loon 2011-01-26 13:29:53 UTC
Created attachment 56440 [details]
source of the message being replied to in previous screenshot
Comment 11 Torgny Nyblom 2011-10-05 06:19:40 UTC
The source mail contains the html encoded quote sign and not the actual quote sign.
Comment 12 Alexander van Loon 2011-10-05 06:32:14 UTC
Thank you for your reply Torgny, but I don't understand. You seem to be referring only to the last two attachments. Can you take a look at the first four attachments were the quote sign is not replaced, but completely missing for some lines (which also have incorrect line breaks)? Those first four e-mails were certainly not HTML e-mails.

I wonder if I'm the only one seeing this behaviour? Because I'm still encountering it even to this day with the latest KMail updates in Kubuntu Oneiric. Or might there be something wrong in my installation and is it possible that formatting my hard drive and doing a new install might solve it? Because I've been upgrading all the way since the early betas of KMail 2?
Comment 13 Laurent Montel 2011-10-06 11:50:56 UTC
Git commit 557db06eeb8a3ba3a92ae00425ccc4568b59c86a by Montel Laurent.
Committed on 06/10/2011 at 13:50.
Pushed by mlaurent into branch 'master'.

Fix Bug 263313 - inserts line breaks in quoted messages, missing quote signs

BUG: 263313
FIXED-IN: 4.7.3

M  +1    -0    kmail/kmcomposewin.cpp

http://commits.kde.org/kdepim/557db06eeb8a3ba3a92ae00425ccc4568b59c86a
Comment 14 Laurent Montel 2011-10-06 11:51:48 UTC
Git commit 82b70f6ffddea6f841c8e2708eaabbeb5adb9a40 by Montel Laurent.
Committed on 06/10/2011 at 13:50.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 263313 - inserts line breaks in quoted messages, missing quote signs

BUG: 263313
FIXED-IN: 4.7.3
(cherry picked from commit 557db06eeb8a3ba3a92ae00425ccc4568b59c86a)

M  +1    -0    kmail/kmcomposewin.cpp

http://commits.kde.org/kdepim/82b70f6ffddea6f841c8e2708eaabbeb5adb9a40
Comment 15 Laurent Montel 2011-10-06 11:54:20 UTC
Be sure to configure "Use smart quoting" in configure/editor

I fixed a pb where quote was not added to template parser.
So now it's oki for me.

Reopen if you see other pb.
Regards
Comment 16 Alexander van Loon 2011-10-06 12:06:26 UTC
Thank you very much for fixing this Laurent. I have two questions, 'Use smart quoting' is an option which is not enabled by default, yet the option seems to enable what is default behavior for every e-mail client I know of? And what is the reason for not having this option enabled by default? And what do you mean with a 'pb'?
Comment 17 Laurent Montel 2011-10-06 12:19:24 UTC
pb == problem or bugs :)

Use smart quoting is by default.
Could you update to 4.7.3 (in branch) or apply patch and look at if it works for you please ?
Thanks.

Now I don't have pb.
Comment 18 Alexander van Loon 2011-11-10 10:53:34 UTC
I've upgraded recently to 4.7.3 and it seems KMail is no longer messing up with quoting.