Fix Bug 263313 - inserts line breaks in quoted messages, missing quote signs

BUG: 263313
FIXED-IN: 4.7.3